re: #789, use orderBy instead of sortBy, fix styling jumps

--- a/client/styles/components/_sketch-list.scss
+++ b/client/styles/components/_sketch-list.scss
@@ -22,6 +22,7 @@
 .sketch-list__sort-button {
   display: flex;
   align-items: center;
+  height: #{35 / $base-font-size}rem;
   & svg {
     @include themify() {
       fill: getThemifyVariable('inactive-text-color')
@@ -30,6 +31,7 @@
 }
 
 .sketches-table__header {
+  border-bottom: 2px dashed transparent;
   padding: #{3 / $base-font-size}rem 0;
   @include themify() {
     color: getThemifyVariable('inactive-text-color')
@@ -37,7 +39,6 @@
 }
 
 .sketches-table__header--selected {
-  border-bottom: 2px dashed;
   @include themify() {
     border-color: getThemifyVariable('logo-color');
   }
